force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/KimbleOne__CostBehaviourRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Cost Behaviour Rule</label>
    <nameField>
        <label>Cost Behaviour Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Behaviour Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>