force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__AcceptCostChanges__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AcceptCostChanges__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Accept Cost Changes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AcceptCostChanges</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Cost Behaviour Rules (Accept Cost Changes Enum)</relationshipLabel>
    <relationshipName>CostBehaviourAcceptCostRules</relationshipName>
    <type>Lookup</type>
</CustomField>