force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__ApplyDefaultOnCostTypeBasisChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApplyDefaultOnCostTypeBasisChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Default On Cost Type Basis Change</label>
    <type>Checkbox</type>
</CustomField>