force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__CanEditCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanEditCostRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Cost Rate</label>
    <type>Checkbox</type>
</CustomField>