force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__DefaultCostType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultCostType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Cost Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentDefaultCostType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Cost Behaviour Rules</relationshipLabel>
    <relationshipName>CostBehaviourRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>