force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__ForecastFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastFactor__c</fullName>
    <label>Forecast Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>