force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__RateCardCombinationDefinition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCardCombinationDefinition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Card Combination Definition</label>
    <referenceTo>KimbleOne__RateCardCombinationDefinition__c</referenceTo>
    <relationshipLabel>Cost Behaviour Rules</relationshipLabel>
    <relationshipName>CostBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>