force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__UseParentCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UseParentCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Parent Cost</label>
    <type>Checkbox</type>
</CustomField>