force-app/main/default/objects/KimbleOne__CostBehaviourRule__c/fields/KimbleOne__UseResourceStandardCostOnTimeEntry__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UseResourceStandardCostOnTimeEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Resource Standard Cost On Time Entry</label>
    <type>Checkbox</type>
</CustomField>